# csci555_USC

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  example.sh  init.sh  perf_run_task.py  run_task.py  run_task_memory.py  strace_run_task.py  thanos_run_all.sh
NPB3.4.2/NPB3.4-MPI/config/: make.def
NPB3.4.2/NPB3.4-OMP/: compile_all.sh
NPB3.4.2/multithread/: memory.cpp
cmake/: FindLibpfm.cmake
multithread/: compile_all.sh  memory.cpp  perf.sh
src/: main.cpp
src/migration/: mem_migration_cell.hpp  migration.hpp  migration_cell.hpp  migration_var.cpp  migration_var.hpp  tickets.cpp  tickets.hpp
src/migration/performance/: mempages_table.hpp  performance.hpp  rm3d.hpp  tid_perf_table.hpp
src/migration/strategies/: memory_mig_strats.hpp  memory_strategy.hpp  thread_mig_strats.hpp  thread_strategy.hpp
src/migration/strategies/memory_strats/: lmma.hpp  rmma.hpp  tmma.hpp
src/migration/strategies/thread_strats/: annealing.hpp  cimar.hpp  imar2.hpp  lbma.hpp  nimar.hpp  random.hpp  rm3d_strategy.hpp
src/migration/utils/: i_sample.hpp  inst_sample.hpp  mem_sample.hpp  reqs_sample.hpp  times.cpp  times.hpp
src/samples/: samples.cpp  samples.hpp
src/samples/perf_event/: perf_event.cpp  perf_event.hpp  perf_util.hpp
src/system_info/: memory_info.cpp  memory_info.hpp  system_info.cpp  system_info.hpp
src/system_info/memory/: mem_region.hpp  mem_region_maps.hpp  mem_region_numa_maps.hpp  thp.hpp  vmstat.hpp
src/system_info/processes/: process.hpp  process_tree.hpp
src/third_party_libs/: notes.txt
src/third_party_libs/tabulate/: tabulate.hpp
src/utils/: arithmetic.hpp  cmd.hpp  string.hpp  time.hpp  types.hpp  verbose.cpp  verbose.hpp
